# agentdex-cli

./: .agentlint.json  .babysit-ignore-checks  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUTONOMY_THRESHOLD.md  CLAUDE.md  CONTRIBUTING.md  DEFERRED.md  Dockerfile  EVAL.md  IDEAL_EXPERIENCE.md  LICENSE  NOTICE  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README_zh.md  SKILL.md  agentlint.yaml  eval.py  eval_ignore_none.py  index.js  infer.py  kaos.yaml  kaos.yaml.example  orca.yaml  package-lock.json  package.json  pipeline.py  pyproject.toml  requirements.txt  run.sh  selfplay_loop.py  trace_converter.py
.codex/: AGENTS.md  hooks.json
.devin/: instructions.md
.factory/: mcp.json
.fleet-goal/: .gitignore  GOALS.md  PROGRESS.md  PROTOCOL.md
.github/: CODEOWNERS
.harness/: CORPUS_QUERY_KEYWORDS  README.md
.supergoal-v2/: STATE.md
agent_evolve/: __init__.py  api.py
agentocr/: utils.py
agents/: learned-notes.md
blog/: how-we-build-bene.md  kaos-incident-response.html  kaos-launch-post.md  kaos-regression-guard.html  kaos-v060-medium-post.md  what-is-bene.md  why-bene.md
bridges/: gemini_bridge.py
cards-mvp/: result_card.py  test_schemas.py
config/: __init__.py
configs/: anthropic_mobile_agent.py  base.yaml  bus.py  deep_analyzer_agent.py  esg_agent.py  human_capability_debate.py  interday_trading.py  multi_agent_debate.py  online_trading_agent.py  operator_browser_agent.py  planning_agent.py  trading_agents.py  v3_bus.py
core/: __init__.py  skill.py  skill_schema.py
cron/: arena_selftest.sh  dream_consolidate.sh  expedition_smoke.sh  resim_audit.sh  weekly_harness_audit.sh
data/: __init__.py  exporters.py  schemas.py
demo_alpha_sweep_bench/: README.md  run.py
demo_arc_agi3_test/: .gitignore
demo_consolidation_scale_bench/: run.py
demo_failure_intelligence_bench/: README.md
demo_neuroplasticity_bench/: results.md
demo_plasticity_overhead_bench/: README.md  run.py
demo_realistic_retrieval_bench/: README.md  results.json  results.md  run.py
demo_vault/: .gitignore  Log.md  README.md
docs/: DEV_SETUP.md  REPO_STRUCTURE.md  checkpoints.md  memory.md  neuroplasticity.md  philosophy.md  skills.md
examples/: library_basics.py  memory_search.py  meta_harness_coding.py  meta_harness_crm_campaigns.py  meta_harness_fraud_detection.py  multi_gpu_research.py  run_aime_optimizer_experiment.py  run_aime_textgrad_experiment.py  run_benchmark.py  run_browser_use_agent.py  run_bus.py  run_deep_analyzer_agent.py  run_esg_agent.py  run_gpqa_gsm8k_textgrad_experiment.py  run_hle.py  run_intraday_trading.py  run_leetcode_reflection_agent.py  run_leetcode_tool.py  run_mobile_agent.py  run_offline_trading_agent.py  run_planning_agent.py  run_skillsbench.py  run_tool_calling_agent.py  run_tool_calling_agent_experiment_async.py  run_tool_calling_agent_experiment_async.sh  run_tool_calling_agent_optimized.py  run_tool_calling_agent_reflection.py  run_trading_agents.py  run_trading_strategy_agent_optimized.py  self_healing_agent.py  shared_log_coordination.py  skillsbench_tracer.py
examples/agent-starter-kit/: .gitignore  .mcp.json  README.md  arena_client.py  arena_mcp_proxy.py  pyproject.toml
examples/agent-starter-kit/agents/: begin_battle.py  claude_agent.py  max_damage_agent.py
examples/agent-starter-kit/scripts/: bootstrap.sh
examples/agent-starter-kit/tests/: test_clean_errors.py
expansion/: __init__.py  base.py  env_worker.py  task_manager.py
extraction/: __init__.py  base.py
figs/: figure.py
inference/: __init__.py  base.py  embedding_service.py  retriever.py  skill_usage.py
kaos/: core.py  intake.py  shared_log.py
llm/: __init__.py  client.py
plugin/: __init__.py  plugin.yaml
preprocessing/: __init__.py  trajectory_adapter.py
prompts/: expansion_prompts.py  filter_prompts.py  merge_prompts.py  reasoner_proposer.txt  skill_prompts.py
scripts/: INSTALL.md  _smoke_clean_state.sh  _smoke_pr_cascade_breaker_gate.sh  _smoke_review_comment_signoff_gate.sh  _smoke_tiny_pr_gate.sh  adx_ps_server.sh  arena_loadtest.py  build_binaries.js  check-changelog.js  clean_state.py  detect_secrets_no_drift.sh  doc_lint.py  enforce_review_bounds.sh  eventlog_append_bench.py  inject-keys.sh  install_doc_lint_precommit.sh  install_hooks.sh  install_opencode.sh  llm_proxy_measure.py  new_worktree.sh  pr_cascade_breaker_gate.py  prepare_release.py  resim_audit.py  review_comment_signoff_gate.py  sync_toc.sh  tiny_pr_gate.py  train_alfworld_text.sh  train_search_agentocr.sh  train_search_skillzero_3b.sh  train_search_skillzero_7b.sh  train_search_text.sh  train_search_text_skill.sh  validate-suite.js  verify_release_integrity.py
site/: SKILL.md  build-blog.py  build-docs.py  check-i18n-parity.mjs  index.html  llms.txt
skillclaw/: dashboard_store.py  prm_scorer.py
src/: evolve.js  forceUpdate.js  registry.py
sweeps/: 2026-06-09-dream-consolidate.md  2026-06-09-weekly-harness-audit.md  2026-06-16-adx-cli-fleet-kanban.md  adx-cli-fleet-kanban.json
test/: a2aProtocolHeartbeatLoop.test.js  adapters.opencode.test.js  adapters.test.js  adaptersSyntax.test.js  atpHeartbeatSignalsHandler.test.js  atpTaskPickup.test.js  autoDistillConv.test.js  conversationSniffer.test.js  cycleHardTimeout.test.js  evolveCollect.test.js  evolveDispatch.test.js  evolveEnrich.test.js  evolveGuards.test.js  execBridgeSpawnNpmShim.test.js  fetchSecurity.test.js  forceUpdateHeartbeat.test.js  forceUpdateIdempotent.test.js  forceUpdateLastUpdateReport.test.js  heartbeatResilienceRound6.test.js  heartbeatResilienceRound8.test.js  hubEvents.test.js  hubFetch.test.js  hubUrlResolution.test.js  lifecycleHeartbeatLoopResilience.test.js  lifecycleRateLimit.test.js  loadBackoff.test.js  localStateAwareness.test.js  mailboxStore.test.js  memoryGraph.test.js  memoryGraphRotation.test.js  openPRRegistry.test.js  portable.test.js  proxyAssetSearchPlan.test.js  proxyBedrock.test.js  proxySettings.test.js  proxyStreaming.test.js  proxyTokenReuse.test.js  questionComposer.test.js  recallVerifier.test.js  (+13 more)
(+1148 files in other folders)
