[project]
name = "agentdex-cli-workspace"
version = "0.1.0"
description = "agentdex-cli uv workspace root — orchestrator + plugin + engine + bridges + observability + KAOS"
requires-python = ">=3.11,<3.14"

[tool.uv.workspace]
members = [
  "packages/agentdex_cli",
  "packages/agentdex_engine",
  "packages/agentdex_plugin",
  "packages/adx_bridges",
  "packages/helios_client",
  "packages/agentdex_observe",
  "packages/kaos",
]

[tool.uv.sources]
agentdex-cli     = { workspace = true }
agentdex-engine  = { workspace = true }
agentdex-plugin  = { workspace = true }
adx-bridges      = { workspace = true }
helios-client    = { workspace = true }
agentdex-observe = { workspace = true }
kaos             = { workspace = true }

[tool.pytest.ini_options]
# importlib mode avoids the "duplicate `tests` package" collision when multiple
# workspace packages each carry a `tests/__init__.py` (kaos / adx_bridges /
# agentdex_cli all do). The kaos vendored test suite has its own collection
# errors (missing fixtures, internal pytest plugins not vendored) — exclude
# from the agentdex-cli regression sweep.
addopts = "--import-mode=importlib"
norecursedirs = ["packages/kaos/tests", ".venv", "_attic", "expeditions"]
testpaths = [
  "packages/adx_bridges/tests",
  "packages/agentdex_cli/tests",
  "packages/agentdex_engine/tests",
]
