[project]
name = "agentdex-cli-workspace"
version = "0.1.0"
description = "agentdex-cli uv workspace root — orchestrator + plugin + engine + bridges + observability + KAOS"
requires-python = ">=3.11,<3.14"

[tool.uv.workspace]
members = [
  "packages/agentdex_cli",
  "packages/agentdex_engine",
  "packages/agentdex_plugin",
  "packages/adx_bridges",
  "packages/adx_showdown",
  "packages/adx_frontier",
  "packages/adx_ladders",
  "packages/agentdex_arena",
  "packages/helios_client",
  "packages/agentdex_observe",
  "packages/kaos",
]

[tool.uv.sources]
agentdex-cli     = { workspace = true }
agentdex-engine  = { workspace = true }
agentdex-plugin  = { workspace = true }
adx-bridges      = { workspace = true }
adx-showdown     = { workspace = true }
adx-frontier     = { workspace = true }
adx-ladders      = { workspace = true }
agentdex-arena   = { workspace = true }
helios-client    = { workspace = true }
agentdex-observe = { workspace = true }
kaos             = { workspace = true }

# PR-C (workflow w0z1i9vcs H1 fix): install the rails AGENTS.md + the
# .pre-commit-config.yaml header advertise. Without this dep group, a fresh
# contributor running `uv sync` gets a workspace without ruff / mypy /
# pre-commit binaries, so the "Hard rails encoded in code" claim in
# AGENTS.md:28 was config-only theater. Install via `uv sync --group dev`.
[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-timeout>=2.3",
  "tiktoken>=0.8",
  "ruff>=0.13.4",
  "mypy>=1.18.2",
  "pre-commit>=4.0.0",
  "detect-secrets>=1.5.0",
]

[tool.ruff]
# Encoded in code so AGENTS.md "ruff configured in pyproject.toml" claim is true.
# G2 ep6: architecture-as-hard-rails, not prose.
line-length = 100
target-version = "py311"
extend-exclude = [
  "packages/kaos",    # vendored subtree — upstream owns lint config
  "vendor/aaop",      # squashed aaop paper repos (phase-9) — same posture
  "site/examples",    # bene-main mirror target — upstream owns lint posture; mirror cron re-introduces ruff drift on every push (PR #128/#129/#130 caught it 4× then this carveout closed it)
  ".venv",
  "_attic",
  "expeditions",
]

[tool.ruff.lint]
# Conservative starter rule-set; phase 8 polish broadens.
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",  # line length — handled by formatter, not the linter
  "B008",  # default arg = call — pydantic Field() / FastAPI Depends() everywhere
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # fixtures import for side-effect

[tool.mypy]
# AGENTS.md claims mypy --strict — phase-8 polish will broaden to all packages.
# MVP M5: ship the config so pre-commit hook has something to call; strict gate
# scoped to the schema layer (cards/) until M7 tightens.
python_version = "3.11"
strict = true
exclude = [
  "packages/kaos/",
  "vendor/aaop/",
  "_attic/",
  "build/",
  "dist/",
  "expeditions/",
]
# Loosen for M5: only the Three Cards schema is strict by default; rest opts in
# per-package via [[tool.mypy.overrides]] as phases land.
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agentdex_engine.cards.*"
strict = true

[[tool.mypy.overrides]]
# Vendored / third-party shapes — relax until M7.
module = ["langfuse.*", "anthropic.*", "openai.*", "google.*", "camoufox.*", "kaos.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
# importlib mode avoids the "duplicate `tests` package" collision when multiple
# workspace packages each carry a `tests/__init__.py` (kaos / adx_bridges /
# agentdex_cli all do). The kaos vendored test suite has its own collection
# errors (missing fixtures, internal pytest plugins not vendored) — exclude
# from the agentdex-cli regression sweep.
addopts = "--import-mode=importlib"
norecursedirs = ["packages/kaos/tests", "vendor", ".venv", "_attic", "expeditions"]
testpaths = [
  "packages/adx_bridges/tests",
  "packages/adx_showdown/tests",
  "packages/agentdex_arena/tests",
  "packages/agentdex_cli/tests",
  "packages/agentdex_engine/tests",
  "packages/agentdex_plugin/tests",
]
