[project]
name = "agentdex-agent-starter-kit"
version = "0.1.0"
description = "Reference client + MCP proxy + example agents for agentdex.ai-builders.space"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "cryptography>=42",
  "mcp>=1.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
